--- a/main.css
+++ b/main.css
@@ -105,7 +105,6 @@ transition: transform .2s;
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 box-sizing: border-box;
 border-radius: 20px;
-height: 520px;
 }
 
 .box h3{
@@ -123,7 +122,8 @@ line-height:30px;
 
 .box img{
 height: 300px;
-width: 100%;
+width: 80%;
+border-radius: 10px;
 }
 
 .box:hover{
