--- a/main.css
+++ b/main.css
@@ -57,7 +57,7 @@ main {
     background-color: #f4f4f4;
     margin: 0;
     display: flex;
-    justify-content: center;
+    justify-content:space-between;
     align-items: center;
     height: 78vh;
 }
