--- a/main.css
+++ b/main.css
@@ -131,7 +131,9 @@ transform: scale(1.1);
 background-color: white;
 }
 
-.contact{
+.contact h2{
+text-align: center;
+font-weight: bold;
 }
 
 .contact-form {
