--- a/main.css
+++ b/main.css
@@ -79,12 +79,16 @@ input {
 }
 
 button {
-    padding: 10px;
     background-color: #007bff;
     color: #fff;
     border: none;
     border-radius: 20px;
     cursor: pointer;
+    width: 100%;
+    max-width: 250px;
+    padding: 1em 1.5em;
+    font-size: 1rem;
+    text-align: center;
 }
 
 button:hover {
@@ -99,25 +103,33 @@ justify-content: center;
 .box{
 width:22%;
 text-align:center;
-padding:10px 10px;
+padding:10px;
 margin:0px 5px;
 transition: transform .2s;
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 box-sizing: border-box;
 border-radius: 20px;
+display: flex;
+flex-direction: column;
+justify-content: space-between; 
+align-items: center;
+
 }
 
 .box h3{
 color:#2F94A8;
-font-size:20px;
-padding: 10px;
-
+padding: 1em 1.5em;
+font-size: 1rem;
+text-align: center;
+font-size: larger;
+font-weight: bolder;
 }
 
 .box p{
-font-size:16px;
 line-height:30px;
-
+padding: 1em 1.5em;
+font-size: 1rem;
+text-align: center;
 }
 
 .box img{
