--- a/main.css
+++ b/main.css
@@ -21,6 +21,7 @@ padding:10px 0px;
 display:flex;
 flex-direction: column;
 justify-content:center;
+align-items: center;
 background-color:#666666;
 }
 
